# soundbox

./: .gitignore  .gitmodules  .swcrc  CMakeLists.txt  CMakeSettings.json  CREDITS  LICENSE  Makefile  README.md  TODO.md  TODO.txt  appconfig.jsonc  audio-interface.d.ts  audio-interface.js  audiodevice.js  binding.gyp  imgui.ini  index.html  interface.d.ts  interface.js  libsoundio.so.2  main.cpp  main.js  package-lock.json  package.json  preload.js  style.css  tsconfig.json
app/: about.html  amdloader.js  index.html  renderer.js  renderer.js.map  style.css  synth-worker.js
app-src/: colors.ts  main.ts  pattern-editor.ts  seq-editor.ts  song.ts  synth.ts  system-audio.ts  track-editor.ts  tsconfig.json
app/modules/: waveform.html
cmake/: Findlilv.cmake
interface-src/: binding.cpp
native-src/: binding.cpp
nativefiledialog/: .gitignore
nativefiledialog/src/: nfd_win.cpp
nativefiledialog/src/include/: nfd.h
screenshots/: README.md
src/: audio.cpp  audio.h  audio.ts  audiodevice.ts  audiofile.cpp  audiofile.h  change_history.cpp  change_history.h  dsp.cpp  dsp.h  editor.cpp  editor.h  imgui_stdlib.cpp  imgui_stdlib.h  main.cpp  main.ts  os.h  pattern_editor.cpp  plugins.cpp  plugins.h  preload.ts  serialize.cpp  song.cpp  song.h  synth.ts  sys.cpp  sys.h  theme.cpp  theme.h  track_editor.cpp  tsconfig.json  ui.cpp  ui.h  ui_interact.cpp  util.cpp  util.h  winmgr.cpp  winmgr.h  worker.cpp  worker.h
src/editor/: change_history.cpp  change_history.h  editor.cpp  editor.h  export.cpp  theme.cpp  theme.h
src/modules/: analyzer.cpp  analyzer.h  compressor.cpp  compressor.h  create.cpp  delay.cpp  delay.h  eq.cpp  eq.h  gain.cpp  gain.h  index.ts  limiter.cpp  limiter.h  module-preload.ts  modules.cpp  modules.h  omnisynth.cpp  omnisynth.h  reverb.cpp  reverb.h  util.cpp  util.h  util.ts  volume.cpp  volume.h  waveform.cpp  waveform.h
src/modules/effect/: volume.ts
src/modules/synth/: dummy.ts  synthbase.ts  waveform.ts
src/plugin_hosts/: ladspa.cpp  ladspa.h  lv2.cpp  lv2.h
src/plugin_hosts/lv2-host/: features.cpp  host.cpp  instance.cpp  interface.cpp  interface.h  internal.h  lv2interface.h  lv2internal.h  ui.cpp
src/ui/: change_history.cpp  change_history.h  channel_settings.cpp  directories.cpp  editor.cpp  editor.h  export.cpp  file_browser.cpp  file_browser.h  fx_mixer.cpp  pattern_editor.cpp  plugin_list.cpp  song_settings.cpp  theme.cpp  theme.h  themes_ui.cpp  track_editor.cpp  tunings.cpp  ui.cpp  ui.h  ui_interact.cpp
styles/: Soundbox Dark.toml  Test Theme.toml  red.txt
themes/: Soundbox Dark.toml
worker-src/: main.ts  tsconfig.json
